# nanoGPT_ONNXRuntime

./: README.md  evaluate_quantization.py  main_cpp.cpp  main_cpp_cuda.cpp  quantize_onnx.py  trans2onnx.py
CXX_Utils/: CMakeLists.txt  fused_gemm_customop.cc
model_transform/: cuda.py
